fixed navbar items alignment in light as same as dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,18 +396,6 @@ body.nav-active {
   transform: translateX(320px);
 }
 
-.navbar-top {
-  margin-block-end: 34px;
-}
-
-.nav-close-btn ion-icon {
-  --ionicon-stroke-width: 35px;
-}
-
-.nav-close-btn {
-  margin: 0px;
-}
-
 .navbar-item:not(:last-child) {
   border-block-end: 1px solid var(--black_10);
 }
@@ -790,7 +778,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  
+
 }
 
 .course-card:is(:hover, :focus-within) {
@@ -1436,7 +1424,6 @@ button:hover {
 
   .navbar-list {
     display: flex;
-    gap: 8px;
   }
 
   .navbar-item:not(:last-child) {
@@ -1444,7 +1431,8 @@ button:hover {
   }
 
   .navbar-link {
-    padding: 8px 16px;
+    padding: 8px 0rem;
+    transition: var(--transition);
   }
 
   .header .btn {
@@ -1556,52 +1544,8 @@ button:hover {
     gap: 48px;
   }
 }
-/* Ge
-neral dark mode settings */
-body.dark-mode .navbar {
-  background-color: var(
-    --keppei
-  ); /* Background color for navbar in dark mode */
-  color: var(--white); /* Text color */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional shadow for better visibility */
-}
+/* General dark mode settings */
 
-body.dark-mode {
-  background-color: var(--oxford-blue);
-}
-
-/* Navbar list background in dark mode */
-body.dark-mode.navbar {
-  background-color: var(--oxford-blue);
-  color: var(--white);
-}
-/* Button styles in dark mode */
-body.dark-mode .navbar a:hover {
-  background-color: var(--keppei);
-  color: var(--white);
-}
-
-/* Hover effect for navbar buttons */
-body.dark-mode .navbar a {
-
-  color: var(--white);
-}
-/* Other styles */
-body.dark-mode .btn:hover {
-  background-color: var(--white);
-  color: var(--oxford-blue);
-}
-body.dark-mode #theme-toggle {
-  background-color: var(--oxford-blue);
-}
-
-body.dark-mode #theme-icon {
-  color: var(--white);
-}
-
-body.dark-mode h1 {
-  color: aliceblue;
-}
 #theme-toggle {
   /* position: fixed; */
 
@@ -1620,26 +1564,8 @@ body.dark-mode h1 {
   font-size: 24px;
   color: var(--oxford-blue);
 }
-body.dark-mode.navbar {
-  background-color: var(--oxford-blue);
-  color: var(--white);
-}
 
-body.dark-mode .navbar a:hover {
-  background-color: var(--keppei);
-  color: var(--white);
-}
 
-/* Navbar links in dark mode */
-body.dark-mode .navbar a {
-  color: var(--white);
-}
-
-/* Hover effect in dark mode */
-body.dark-mode .btn:hover {
-  background-color: var(--white);
-  color: var(--oxford-blue);
-}
 
 /* Default Light Theme (No box) */
 .navbar {
@@ -1654,7 +1580,7 @@ body.dark-mode .btn:hover {
 
 .navbar-list {
   padding: 0; /* No padding */
-  gap: 15px; /* Keep spacing between items */
+  gap: 1.5rem; /* Keep spacing between items */
 }
 
 .navbar-link {
